--- a/classworks/polina-rudenko/02_htmlcss/css/style.css
+++ b/classworks/polina-rudenko/02_htmlcss/css/style.css
@@ -9,7 +9,7 @@ body
      flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    width: 17%;
+    width: 300px;
     position: fixed;
     left: 0;
     background-color: #212527;
@@ -99,7 +99,6 @@ body
 
 .Intro
 {
-  margin: 0 0 0 17%;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -107,7 +106,8 @@ body
   background: url(../images/banner.jpg);
   background-size: 100% 100%;
   height:760px ;
-  width: 83%;
+  width: calc(100% - 300px);
+  margin: 0 0 0 300px;
   color: #fff;
 }
 .IntroCenter
@@ -146,18 +146,17 @@ body
 
 .Portfolio
 {
-
+  width: calc(100% - 300px);
+  margin: 0 0 0 300px;
   background-color: #f5f9f9;
-  margin: 0 0 0 17%;
-  top: 760px;
   height:1024px ;
-  width: 83%;
   color: #888;
   box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
 }
 
 .PortfolioCard
 {
+  width: 300px;
   display: flex;
   flex-direction: column;
   margin: 15px;
@@ -192,12 +191,10 @@ margin: :20px;
 }
 .Contact
 {
-
+  width: calc(100% - 300px);
+  margin: 0 0 0 300px;
   background-color: #e2e7e6;
-  margin: 0 0 0 17%;
-  top: 760px;
   height:1000px ;
-  width: 83%;
   color: #888;
   box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
 }
@@ -213,30 +210,30 @@ margin: :20px;
 .ContactNameEmail
 {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
 }
 
  input {
    position: relative;
-   -webkit-appearance: none;
    display: block;
    border: 0;
    outline: 0;
-   background: #fff;
    background: rgba(255, 255, 255, 0.75);
-   width: 100%;
+   width: 220px;
    border-radius: 0.35em;
    padding: 0.75em 1em 0.75em 1em;
    box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
    border: solid 1px rgba(0, 0, 0, 0.15);
+   margin: 15px 15px 15px 15px;
+   font-size: 17px;
    }
     textarea {
       height: 300px;
-      width: 70%;
+      width: 500px;
       margin: 10px;
     position: relative;
-    -webkit-appearance: none;
+    font-size: 19px;
     display: block;
     border: 0;
     outline: 0;
