--- a/classworks/nikita-solosniuk/02_html_css_part-1/styles/style.css
+++ b/classworks/nikita-solosniuk/02_html_css_part-1/styles/style.css
@@ -70,6 +70,24 @@ body {
 .fa {
     color: pink;
 }
+.fa.social {
+    color: dimgrey;
+    padding: 0 12px;
+    font-size: 22px;
+}
+.fa.social:hover {
+    cursor: pointer;
+}
+.fa.social:active {
+    cursor: pointer;
+    color: rgba(69, 69, 69, 0.5);
+}
+.social-bar {
+    height: 55%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
 .main {
     display: flex;
     flex-direction: column;
@@ -84,7 +102,7 @@ body {
     padding: 350px 0 284px 0;
     text-align: center;
 }
-.intro-button {
+.button {
     font-family: 'Source Sans Pro', sans-serif;
     width: 250px;
     height: 75px;
@@ -94,16 +112,16 @@ body {
     border: none;
     border-radius: 10px;
 }
-.intro-button:hover {
+.button:hover {
     color: white;
     box-shadow: #6a9e9b 0 0 0 1px;
     background-color: #6a9e9b;
     cursor: pointer;
 }
-.intro-button:focus {
+.button:focus {
     outline: none;
 }
-.intro-button:active {
+.button:active {
     background-color: #2c6f6b;
     box-shadow: #2c6f6b 0 0 0 1px;
 }
@@ -142,7 +160,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 700px;
+    padding-bottom: 200px;
 }
 .dotted {
     border-bottom: 1px dotted white;
@@ -188,8 +206,40 @@ body {
 .content-text {
     color: #888;
     font-size: 23px;
-    width: 1300px;
+    width: 1250px;
     text-align: center;
     line-height: 40px;
     padding-bottom: 50px;
+}
+.inputs-row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 35px;
+}
+.input {
+    font-family: 'Source Sans Pro', sans-serif;
+    border-radius: 10px;
+    font-size: 20px;
+    border: solid 1px rgba(0, 0, 0, 0.15);
+    height: 100%;
+    width: 100%;
+    padding: 0.75em 1em 0.75em 1em;
+    box-shadow: 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
+}
+.input:focus {
+    outline: none;
+    box-shadow: aquamarine 0 0 2px 2px;
+}
+.input-name {
+    width: 40%;
+    margin-right: 40px;
+}
+.input-email {
+    width: 40%;
+}
+.input-message {
+    height: 400px;
+    width: 83%;
+    margin-bottom: 30px;
 }
