--- a/classworks/yegor-koren/02_html_css_part_1/css/style.css
+++ b/classworks/yegor-koren/02_html_css_part_1/css/style.css
@@ -11,6 +11,7 @@ body{
   color: #fff;
 }
 .nav {
+  min-height: 400px;
   height: 100vh;
   width: 400px;
   background-color: #1a1919;
@@ -50,7 +51,7 @@ a {
   color: #807878;
 }
 .menu-item {
-  height: 60px;
+  height: 80px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -95,6 +96,7 @@ a {
   box-sizing: border-box;
 }
 .section1 {
+  min-height: 600px;
   background: url(../img/banner.jpg) no-repeat;
   background-size: cover;
   background-color: gray;
@@ -142,8 +144,55 @@ a {
 .button:hover {
   background-color: rgba(51, 255, 204, 0.8);
 }
-
+.section2 {
+  min-height: 1200px;
+  background-color: rgba(0, 0, 0, 0.08);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.section2 h1{
+  font-size: 25px;
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: normal;
+}
+.section2 p{
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.6);
+  width: 96%;
+  line-height: 1.8;
+}
+.row {
+  max-width: 1200px;
+  margin: 0 30px 0 30px;
+  width: 100%;
+  border: 1px solid green;
+}
+.column {
+  padding: 10px;
+  height: auto;
+  width: calc(100% / 3);
+  border: 1px solid yellow;
+  float: left;
+  display: inline;
+  vertical-align: top;
+}
+.figure {
+  font-size: 0;
+}
+.figure img {
+  width: 100%;
+}
+.figure p {
+  margin: 0;
+  padding: 10px;
+  background-color: #fff;
+  width: 100%;
+}
 .section3 {
+  min-height: 700px;
   background-color: rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
