[Nikita Solosniuk] 03_html-css-part-1

--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -22,7 +22,7 @@ img {
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: lighter;
+    font-weight: 300;
     margin: 0;
     box-sizing: border-box;
 }
