--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/button.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/button.pcss
@@ -5,6 +5,7 @@
   background-color: #85b3b0;
   color: #ebfff9;
   font-size: 22px;
+  font-weight: 400;
   border: none;
   border-radius: 10px;
 }
