--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/sidebar.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/sidebar.pcss
@@ -5,12 +5,11 @@
   height: 100%;
   width: 400px;
   background-color: #222628;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
-.sidebar__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.sidebar__header__user__pic-pic {
-  padding: 40px;
-}
+
