--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/index.pcss
@@ -1,7 +1,8 @@
 @import "./base/scaffolding.pcss";
-
-@import "./components/style.pcss";
-
 @import "./components/button.pcss";
-
 @import "./components/sidebar.pcss";
+@import "./components/user-card.pcss";
+@import "./components/navigation.pcss";
+@import "./components/main.pcss";
+@import "./components/portfolio.pcss";
+@import "./components/contact.pcss";
