--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/base/styles.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/base/styles.pcss
@@ -7,40 +7,62 @@ body {
 *, ::before, ::after {
   box-sizing: inherit;
 }
-/*
-.page-content {
-  display: flex;
-  flex-direction: row;
-}*/
 
 /* Sidebar */
 
 .sidebar {
-  height: 100%;
-  width: 300px;
-  position: fixed;
+  display: none;
 
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgb(39, 31, 31);
-  overflow-x: hidden;
-  padding-top: 30px;
+  @media screen and (min-width: 960px) {
+    height: 100%;
+    /* width: 17%; */
+    width: 25%;
+    position: fixed;
+    background-color: rgb(39, 31, 31);
+    overflow-x: hidden;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
 
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  @media screen and (min-width: 1320px) {
+    /* width: 20%; */
+    width: 300px;
+  }
 }
 
+
+.main {
+  position: relative;
+  width: 100%;
+  left: 0;
+
+  @media screen and (min-width: 960px) {
+    width: 75%;
+    left: 25%;
+  }
+
+  @media screen and (min-width: 1320px) {
+    width: calc(100% - 300px);
+    left: 300px;
+  }
+}
+
+
+
+
+
 .profile {
-  padding: 0 30px 30px 30px;
+  padding: 4vh;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
 }
 
 .profile__avatar {
-  width: 50px;
-  height: 50px;
+  width: 8vh;
+  height: 8vh;
 }
 
 .profile-info {
@@ -49,12 +71,13 @@ body {
 
 .profile-info__name {
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;/*3.5vh;*/
   font-weight: bold;
 }
 
 .profile-info__profession {
   color: #818181;
+  font-size: 15px;/*2.5vh;*/
 }
 
 .nav-item {
@@ -76,27 +99,26 @@ body {
 .nav-item__icon,
 .social-networks-list__icon {
   color: #818181;
-  font-size: 20px;
 }
 
 .nav-item__link {
-  padding: 15px 30px;
+  padding: 2.5vh 5vh;
   text-decoration: none;
   color: #818181;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 1em;/*3vh*/
 }
 
 .social-networks-list {
   text-align: center;
-  margin: 30px auto;
+  margin: 4vh auto;
   padding: 0;
 }
 
 .social-networks-list__icon {
-  padding: 0 10px;
+  padding: 0 1.3vh;
 }
 
 .social-networks-list__icon:hover {
@@ -107,15 +129,14 @@ body {
 .social-networks-list__item {
   list-style-type: none;
   display: inline-block;
-
+  font-size: 15px;
 }
 
 /* Main content */
 
+
+
 .content {
-  position: relative;
-  width: calc(100% - 300px);
-  left: 300px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -126,7 +147,7 @@ body {
 
 .content__header {
   color: #666;
-  font-size: 35px;
+  font-size: 45px;
   font-weight: normal;
   margin: 0;
 }
@@ -136,7 +157,7 @@ body {
 .intro {
   background: url(/images/banner.jpg);
   background-size: 100% 100%;
-  height:760px ;
+  padding: 6em 0;
 }
 
 .intro__text-wrap {
@@ -148,24 +169,25 @@ body {
 
 .intro__title {
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;/*7vh*/
   color: rgb(188, 174, 180);
-  line-height: 60px;
+  line-height: 60px;/*10vh*/
   font-weight: normal;
   margin: 0;
   width: 66%;
 }
 
 .intro__description {
-  padding: 20px 0;
+  padding: 3.3vh 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 20px;/*3.3vh;*/
   color: rgb(188, 174, 180);
-  line-height: 40px;
+  line-height: 40px;/*6.5vh;*/
   width: 50%;
 }
 
 .button {
+  font-family: "Source Sans Pro", sans-serif;
   position: relative;
   display: inline-block;
   border-radius: 0.35em;
@@ -175,9 +197,9 @@ body {
   border: 0;
   cursor: pointer;
   outline: none;
-  margin: 20px;
-  font-size: 20px;
-  padding: 20px 40px;
+  margin: 3.3vh;
+  font-size: 20px;/*3.3vh;*/
+  padding: 3.3vh 9vh;
 }
 
 .button:hover {
@@ -186,6 +208,7 @@ body {
 
 .intro__key-word {
   color: #fff;
+  border-bottom: 1px dotted white;
 }
 
 /* Portfolio */
@@ -194,17 +217,24 @@ body {
   background-color: #f5fafa;
 }
 
-.portfolio__text {
+.content__text {
+  padding: 20px 8%;
   text-align: center;
+  font-size: 20px;
+  color: #888;
+  line-height: 40px;
+  margin: 0;
 }
 
 .portfolio-cards {
-  display:flex;
-  justify-content: space-around;
+  @media screen and (min-width: 737px) {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 .portfolio-cards__wrap {
-  display:flex;
+  display: flex;
   flex-direction: column;
 }
 
@@ -217,26 +247,26 @@ body {
   box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.15);
 }
 
+.portfolio-cards__img {
+  width: 100%;
+  height: 100%;
+}
+
 /* About Me */
 
 .about-me {
   background-color: #ecf1f1;
 }
 
+.about-me__img {
+  width: 90%;
+  padding: 5vh 0;
+}
+
 /* Contact */
 
 .contact {
   background-color: #e8edec;
-}
-
-.contact__text,
-.portfolio__text {
-  padding: 20px 8%;
-  text-align: center;
-  font-size: 20px;
-  color: #888;
-  line-height: 40px;
-  margin: 0;
 }
 
 .contact-form {
@@ -251,27 +281,35 @@ body {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
+  padding: 3.3vh 6%;
   align-items: center;
   width: 100%;
-  padding: 20px 6%;
+  @media screen and (max-width: 736px) {
+    flex-direction: column;
+  }
 }
 
 .contact-form__input,
 .contact-form__textarea {
   border-radius: 8px;
-  padding: 20px 20px;
+  padding: 3.3vh;
+  margin: 2vh;
   box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
   border: solid 1px rgba(0, 0, 0, 0.15);
-  font-size: 20px;
+  font-size: 20px;/*3.3vh;*/
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .contact-form__input {
-  line-height: 25px;
+  line-height: 4.5px;
   width: 47%;
+  @media screen and (max-width: 736px) {
+    width: 97%;
+  }
 }
 
 .contact-form__textarea {
-  height: 300px;
+  height: 50vh;
   width: 85.5%;
-  margin-bottom: 20px;
+  margin-top: 0.3vh;
 }
