Add class show to show menu on mobile

--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -11,11 +11,6 @@ html {
   box-sizing: inherit;
 }
 
-/* img {
-  max-width: 100%;
-  height: auto;
-} */
-
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
@@ -23,8 +18,7 @@ body {
   font-size: 1.6em;
 }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+.show {
+  overflow-x: hidden;
+  transform: translateX(300px);
 }
