--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/intro.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/intro.pcss
@@ -1,15 +1,8 @@
 .intro {
   padding: 50px 0;
   position: relative;
-  width: 100%;
-
   background-image: url("../images/banner.jpg");
   background-size: cover;
-  @media (min-width: 900px) {
-    padding: 100px 0;
-    width: 70%;
-    left: 30%;
-  }
 
   &__title {
     padding: 0 10%;
@@ -19,22 +12,12 @@
 
     font-weight: 100;
     text-align: center;
-
-    @media (min-width: 900px) {
-      padding: 0 25%;
-    }
-
   }
 
   &__description {
     color:rgba(255, 255, 255, 0.75);
     padding: 25px 10%;
     text-align: center;
-
-    @media (min-width: 900px) {
-      padding: 25px 25%;
-    }
-
   }
 
   &__footer {
@@ -42,8 +25,20 @@
     text-align: center;
 
   }
+}
 
-  &__button {
+.intro {
+  @media (min-width: 900px) {
+    padding: 100px 0;
+  }
+}
 
+@media (min-width: 900px){
+  .intro__title {
+      padding: 0 25%;
+  }
+
+  .intro__description {
+      padding: 25px 25%;
   }
 }
