--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/toggle-menu.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/toggle-menu.pcss
@@ -8,13 +8,14 @@
 
   z-index: 999;
 
-  @media (min-width: 900px) {
-    display: none;
-  }
-
   &__icon {
     font-size: 2em;
     color: rgba(255,255,255,0.8);
+  }
+}
 
+@media (min-width: 900px) {
+  .toggle-menu {
+    display: none;
   }
 }
