--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/index.pcss
@@ -4,17 +4,11 @@
 
 @import "./components/card.pcss";
 
-@import "./components/content__article.pcss";
-
 @import "./components/content.pcss";
 
 @import "./components/form.pcss";
 
-@import "./components/grid.pcss";
-
 @import "./components/intro.pcss";
-
-@import "./components/logo.pcss";
 
 @import "./components/navigation.pcss";
 
@@ -25,3 +19,5 @@
 @import "./components/social.pcss";
 
 @import "./components/toggle-menu.pcss";
+
+@import "./components/wrapper.pcss";
