--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/card.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/card.pcss
@@ -3,10 +3,6 @@
   margin: 20px 20px 0 20px;
   font-size: 0;
 
-  @media (min-width: 900px) {
-    width: 25%;
-  }
-
   &__img {
     min-width: 100%;
     max-width: 100%;
@@ -16,5 +12,10 @@
     font-size: 1.5rem;
     background-color: #fff;
     width: 100%;
+  }
+}
+@media (min-width: 900px) {
+  .card {  
+    width: 25%;
   }
 }
