--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
@@ -1,19 +1,21 @@
 .form {
   &__input-wrapper {
     margin: 0 -10px;
+    
     display: flex;
     justify-content: space-between;
-
     flex-wrap: wrap;
   }
+
   &__input {
+    width: 90%;
     margin: 10px 10px;
     background: rgba(255, 255, 255, 0.75);
     box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
     border-radius: 0.35em;
-
     flex-grow: 1;
   }
+
   &__textarea {
     margin: 15px 0 0 0;
     width: 100%;
@@ -27,5 +29,10 @@
     margin: 40px;
     text-align: center;
   }
+}
 
+@media(min-width: 900px) {
+  .form__input {
+    width: 45%;
+  }
 }
