--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/navigation.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/navigation.pcss
@@ -1,27 +1,27 @@
 .navigation {
   color: gray;
-}
 
-.navigation__link {
-  padding-left: 30px;
-  padding-right: 30px;
+  &__link {
+    padding-left: 30px;
+    padding-right: 30px;
 
-  height: 50px;
+    height: 50px;
 
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 
-  text-decoration: none;
-  color: #666;
-  align-items: center;
-  font-size: 20px;
-}
+    text-decoration: none;
+    color: #666;
+    align-items: center;
+    font-size: 20px;
+  }
 
-.navigation__link:hover {
-  background-color: rgba(255,255,255, 0.3);
-  color: white;
-}
+  &__link:hover {
+    background-color: rgba(255,255,255, 0.3);
+    color: white;
+  }
 
-.navigation__link:hover .fa {
-  color: rgba(140, 10, 30, 1);
+  &__link:hover .fa {
+    color: rgba(140, 10, 30, 1);
+  }
 }
