--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/social.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/social.pcss
@@ -3,11 +3,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  position: absolute;
-  bottom: 0;
 
   &__icon {
-    width: 10%;
-    height: 10%;
+    margin:  0 10px;
+    width: 20px;
+    height: 20px;
   }
 }
