--- a/classworks/evgeny-marushko/03_html-css-part-2/src/assets/styles/index.pcss
+++ b/classworks/evgeny-marushko/03_html-css-part-2/src/assets/styles/index.pcss
@@ -1,1 +1,39 @@
-@import "./base/style.pcss";
+@import "./base/profile.pcss";
+@import "./base/sidebar.pcss";
+@import "./base/page-nav.pcss";
+@import "./base/footer.pcss";
+@import "./base/article.pcss";
+@import "./base/content-container.pcss";
+@import "./base/col-container.pcss";
+@import "./base/figure.pcss";
+@import "./base/input-container.pcss";
+@import "./base/section.pcss";
+@import "./base/menu-switcher.pcss";
+
+@reset-global pc;
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+  font-family: arial;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body, menu {
+	margin: 0;
+	padding: 0;
+}
+
+a, a:hover, a:visited, a:active {
+	text-decoration: none;
+}
