--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/sidebar.pcss
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/assets/styles/base/sidebar.pcss
@@ -13,12 +13,12 @@
 }
 
 
-@media (min-width: 1025px) and (max-width: 1300px){
+@media (min-width: 1025px) {
 .sidebar{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 80vw;
+  width: 800px;
   left: 0;
   background-color: #212527;
   color: #FFF;
@@ -30,44 +30,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 70vw;
+  width: 800px;
   left: 0;
   background-color: #212527;
   color: #FFF;
   margin:0;}
-}
-
-@media (min-width: 1301px) and (max-width: 1700px){
-.sidebar{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 50vw;
-  left: 0;
-  background-color: #212527;
-  color: #FFF;
-  margin:0;}
-}
-
-@media (min-width: 1701px) and (max-width: 2000px){
-.sidebar{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30vw;
-  left: 0;
-  background-color: #212527;
-  color: #FFF;
-  margin:0;}
-}
-
-@media (min-width: 2001px) {
-.sidebar{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 17vw;
-  left: 0;
-  background-color: #212527;
-  color: #FFF;}
 }
