Add responsive design and sidebar button

--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -3,7 +3,6 @@
 html {
     width: 100%;
     height: 100%;
-    background: no-repeat url("/images/banner.jpg");
     background-size: cover;
     overflow-x: hidden;
     box-sizing: border-box;
@@ -25,4 +24,7 @@ body {
     font-weight: 300;
     margin: 0;
     box-sizing: border-box;
+}
+.show-sidebar .sidebar{
+  left: 0px;
 }
