--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/navigation.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/navigation.pcss
@@ -29,10 +29,10 @@
 }
 
 .navigation__social {
-    height: 55.1%;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    margin-top: auto;
+    margin-bottom: 20px;
 
     &--item-link {
         color: dimgrey;
@@ -40,10 +40,12 @@
         padding: 0 12px;
         font-size: 22px;
     }
+
     &--item-link:hover {
         cursor: pointer;
         color: rgba(69, 69, 69, 0.9);
     }
+
     &--item-link:active {
         cursor: pointer;
         color: rgba(69, 69, 69, 0.5);
