--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/index.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/index.pcss
@@ -6,3 +6,4 @@
 @import "./components/main.pcss";
 @import "./components/portfolio.pcss";
 @import "./components/contact.pcss";
+@import "./components/burger-button.pcss";
