--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/main.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/main.pcss
@@ -2,25 +2,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(100% - 400px);
-  margin-left: 400px;
 
   &__intro {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
-    padding: 350px 0 284px 0;
+    padding: 210px 20px 120px 20px;
     text-align: center;
+    background: no-repeat url("/images/banner.jpg");
+    background-size: cover;
 
     &--header {
       color: #d5d5d5;
-      font-size: 46px;
+      font-size: 23px;
     }
     &--lorem {
       line-height: 35px;
       padding: 30px 0 40px 0;
-      width: 500px;
-      font-size: 23px;
+      font-size: 18px;
       color: #d5d5d5;
     }
     &--dotted {
@@ -32,3 +32,22 @@
     }
   }
 }
+
+@media (min-width: 1000px) {
+  .main {
+    padding-left: 400px;
+
+    &__intro {
+      padding: 370px 20px 260px 20px;
+
+      &--header {
+        font-size: 48px;
+      }
+      &--lorem {
+        font-size: 23px;
+        width: 500px;
+      }
+    }
+  }
+}
+
