--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/portfolio.pcss
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/assets/styles/components/portfolio.pcss
@@ -2,29 +2,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0 100px 0;
+    padding: 20px;
     background-color: #f1f6f6;
-    width: 100%;
 
   &__header {
     color: #666666;
-    font-size: 48px;
-    padding: 70px 0;
+    font-size: 40px;
+    padding: 20px 0;
     font-weight: 200;
   }
   &__lorem {
     color: #888;
-    font-size: 23px;
-    width: 1250px;
+    font-size: 18px;
     text-align: center;
     line-height: 40px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
   }
   &__gallery {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-
     &-column--item {
       display: flex;
       flex-direction: column;
@@ -38,6 +35,18 @@
       font-size: 18px;
       font-weight: 300;
       color: #666;
+    }
+  }
+}
+
+@media (min-width: 1000px) {
+  .portfolio {
+    padding: 70px 50px 100px 50px;
+    &__header {
+      font-size: 48px;
+    }
+    &__lorem {
+      font-size: 23px;
     }
   }
 }
