Add menu animation and small fixes

--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/card.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/card.pcss
@@ -1,21 +1,19 @@
 .card {
   text-align: center;
   margin: 20px 20px 0 20px;
-  font-size: 0;
 
   &__img {
-    min-width: 100%;
-    max-width: 100%;
+    display: block;
+    width: 100%;
   }
 
   &__description {
     font-size: 1.5rem;
     background-color: #fff;
-    width: 100%;
   }
 }
 @media (min-width: 900px) {
-  .card {  
+  .card {
     width: 25%;
   }
 }
