--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/wrapper.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/wrapper.pcss
@@ -4,7 +4,7 @@
 
 .wrapper__content {
   overflow-y: scroll;
-  height: -webkit-fill-available;
-  height: -moz-available;
+  height: fill-available;
+  height: available;
   flex-grow: 1;
 }
