--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/base/scaffolding.pcss
@@ -16,6 +16,9 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   font-size: 1.6em;
+
+  transition-property: transform;
+  transition-duration: 1s;
 }
 
 .show {
