--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/button.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/button.pcss
@@ -1,5 +1,5 @@
 .button {
-  width: 90%;
+  width: 200px;
   background-color: #8ebebc;
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url(../images/overlay.png);
   border-radius: 0.35em;
@@ -11,6 +11,7 @@
 
 @media(min-width: 900px) {
   .button {
-    padding: 0.75em 2.5em 0.75em 2.5em;
+    padding: 0.75em 2.5em;
+    width: 300px;
   }
 }
