--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/assets/styles/components/form.pcss
@@ -1,7 +1,7 @@
 .form {
   &__input-wrapper {
     margin: 0 -10px;
-    
+
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -26,7 +26,7 @@
   }
 
   &__button {
-    margin: 40px;
+    margin: 20px 0;
     text-align: center;
   }
 }
