--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/index.pcss
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/assets/styles/index.pcss
@@ -1,1 +1,15 @@
 @import "./base/styles.pcss";
+@import "./components/sidebar.pcss";
+@import "./components/profile.pcss";
+@import "./components/nav.pcss";
+@import "./components/social-networks.pcss";
+@import "./components/main.pcss";
+@import "./components/content.pcss";
+@import "./components/toggle-menu.pcss";
+@import "./components/intro.pcss";
+@import "./components/button.pcss";
+@import "./components/portfolio.pcss";
+@import "./components/portfolio-cards.pcss";
+@import "./components/about-me.pcss";
+@import "./components/contact.pcss";
+@import "./components/contact-form.pcss";
